# ArxivScribe

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.sh
arxivscribe/: __init__.py  ai_config.py  cli.py  digest.py  export.py  similarity.py
arxivscribe/arxiv/: __init__.py  fetcher.py  parser.py
arxivscribe/bot/: __init__.py  commands.py  digest_manager.py  filters.py  scheduler.py  voting.py
arxivscribe/llm/: __init__.py  prompts.py  summarizer.py
arxivscribe/llm/providers/: huggingface_provider.py  ollama_provider.py  openai_provider.py
arxivscribe/storage/: db.py
arxivscribe/web/: routes.py
arxivscribe/web/static/css/: style.css
arxivscribe/web/static/js/: app.js
arxivscribe/web/templates/: index.html  paper_card.html
tests/: test_arxiv.py  test_database.py  test_filters.py
